// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`active 1`] = `
Object {
  "&:active": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`checked 1`] = `
Object {
  "&:checked": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`default 1`] = `
Object {
  "&:default": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`empty 1`] = `
Object {
  "&:empty": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`enabled 1`] = `
Object {
  "&:enabled": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`even 1`] = `
Object {
  "&:nth-child(even)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`evenOfType 1`] = `
Object {
  "&:nth-of-type(even)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`first 1`] = `
Object {
  "&:first-child": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`firstOfType 1`] = `
Object {
  "&:first-of-type": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`focus 1`] = `
Object {
  "&:focus": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`focusVisible 1`] = `
Object {
  "&:focus-visible": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`focusWithin 1`] = `
Object {
  "&:focus-within": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`hover 1`] = `
Object {
  "&:hover": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`indeterminate 1`] = `
Object {
  "&:indeterminate": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`invalid 1`] = `
Object {
  "&:invalid": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`last 1`] = `
Object {
  "&:last-child": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`lastOfType 1`] = `
Object {
  "&:last-of-type": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`link 1`] = `
Object {
  "&:link": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notChecked 1`] = `
Object {
  "&:not(:checked)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notDisabled 1`] = `
Object {
  "&:not(:disabled)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notFirst 1`] = `
Object {
  "&:not(:first-child)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notFirstOfType 1`] = `
Object {
  "&:not(:first-of-type)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notLast 1`] = `
Object {
  "&:not(:last-child)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notLastOfType 1`] = `
Object {
  "&:not(:last-of-type)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notOnlyChild 1`] = `
Object {
  "&:not(:only-child)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`notOnlyOfType 1`] = `
Object {
  "&:not(:only-of-type)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`odd 1`] = `
Object {
  "&:nth-child(odd)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`oddOfType 1`] = `
Object {
  "&:nth-of-type(odd)": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`onlyChild 1`] = `
Object {
  "&:only-child": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`onlyOfType 1`] = `
Object {
  "&:only-of-type": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`optional 1`] = `
Object {
  "&:optional": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`placeholderShown 1`] = `
Object {
  "&:placeholder-shown": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`readOnly 1`] = `
Object {
  "&:read-only": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`readWrite 1`] = `
Object {
  "&:read-write": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`required 1`] = `
Object {
  "&:required": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`root 1`] = `
Object {
  "&:root": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`target 1`] = `
Object {
  "&:target": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`valid 1`] = `
Object {
  "&:valid": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;

exports[`visited 1`] = `
Object {
  "&:visited": Object {
    "--w-bg-opacity": "1",
    "backgroundClip": "content-box",
    "backgroundColor": "rgba(59, 130, 246, var(--w-bg-opacity))",
    "webkitBackgroundClip": "content-box",
  },
}
`;
